# crewai

multiple_agents/: pyproject.toml
multiple_agents/src/multiple_agents/: main1.py
multiple_agents/src/multiple_agents/crews/dev_crew/: dev_crew.py
multiple_agents/src/multiple_agents/crews/dev_crew/config/: agents.yaml  tasks.yaml
prompt_chainig_pr/: fun_fact.md  pyproject.toml
prompt_chainig_pr/src/prompt_chainig_pr/: __init__.py  generate_fun_fact.py  main.py
routing_pr/: pyproject.toml
routing_pr/src/routing_pr/: __init__.py  main.py  main1.py  main2.py
uv/project2/: pyproject.toml
uv/project2/src/project2/: hello.py
