[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Humza134", email = "mhumza13420@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
project2 = "project2:main"
main = "project2.hello:myfunction"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
